<resources>
    <string name="app_name">LoginSignUp</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">*******</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="throw_exception">View model not find</string>
</resources>